# zacxiom

./: .codespellrc  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  RULES.md  TRADEMARK.md  build.rs  build.sh  deny.toml  version-to  version-to.sh
.github/workflows/: ci.yml  maintenance.yml  release.yml
docs/: ARCHITECTURE.md  BACKUP_INTEGRATION.md  CHANGELOG-v6.1.0.md  ROADMAP.md  RULES.md  VERIFY_RELEASE.md  masterclass-usefulness-audit.md  memory-audit-v6.3.1.md  product-strategy-v7.0.0.md  release-readiness-v6.0.0.md  trademark.md  vision-v7.0.0.md
example/: config.toml
scripts/: build.sh  depth-audit.sh  gatekeeper.sh  golden-check.sh  golden-update.sh  install.sh  release.sh  stress_test.py  stress_test.sh  uninstall.sh  version-to.sh
scripts/hooks/: zacxiom-pacman-clean.sh  zacxiom-pacman.hook
src/: advisor.rs  audit.rs  cache.rs  cleaner.rs  cli.rs  color.rs  confidence.rs  config.rs  decision.rs  dependency.rs  discovery.rs  display.rs  domain.rs  ecosystem.rs  environment.rs  errors.rs  evidence.rs  exclude.rs  execution_order.rs  explain.rs  history.rs  ignorefile.rs  impact.rs  inspect.rs  main.rs  memory.rs  ownership.rs  parallel.rs  pathguard.rs  pipeline.rs  pipeline_tests.rs  planner.rs  policy.rs  procfs.rs  profiles.rs  progress.rs  risk.rs  rules.rs  safety.rs  scan_cache.rs  (+5 more)
src/advisor/: discover.rs  execution.rs  grouping.rs  mod.rs  render.rs  scoring.rs  types.rs
src/commands/: check_update.rs  clean.rs  config.rs  dedup.rs  doctor.rs  explain.rs  explain_confidence.rs  explain_risk.rs  inspect.rs  mod.rs  plan.rs  report.rs  scan.rs  snapshot.rs  status.rs  undo.rs  viz.rs
src/engine/: classifier.rs  confidence.rs  metadata.rs  mod.rs  rules.rs  types.rs
src/engine/classifier/: mod.rs  tests.rs
src/engine/rules/: database.rs  mod.rs  mod_head.rs  mod_tail.rs
src/engine/rules/database/: cleanable.rs  mod.rs  protected.rs
src/planner/: mod.rs  notes.rs  ownership.rs  recommendation.rs  regeneration.rs  render.rs  types.rs
tests/golden/: doctor.txt  help.txt  scan.txt  status.txt
