[package]
name = "zacxiom"
version = "12.0.1"
edition = "2021"
authors = ["rezky_nightky <with dot rezky at gmail dot com>"]
description = "Easy to use intelligence cleaning in userspace — Filesystem Intelligence Engine for Linux"
license = "GPL-3.0-only"
repository = "https://github.com/oxyzenQ/zacxiom"

[[bin]]
name = "zacxiom"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rayon = "1"
toml = "0.8"
globset = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "thin"
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false
